--- a/README
+++ b/README
@@ -1,9 +1,25 @@
-# Telesk - the free SIP softphone.
-# Requires PyQt4
+Telesk
+======
 
-# Usage
-# ./main      Launch telesk
-# ./main -d   Launch telesk with debug output
+QT and PJSIP based minimalistic SIP Client
+
+Usage:
+-------------------
+ ./main      Launch telesk
+ ./main -d   Launch telesk with debug output
+
+Requirements:
+-------------------
+You need PyQt4 installed to run Telesk.
+
+Supported platforms:
+-------------------
+Currently only English and Russian languages available.
+Currently supported only i686 and x86_64 systems (to run on another platform, u need to compile PJSIP on that platform).
+
+Contribute:
+-------------------
+The team is looking for users having the necessary knowledge to translate, finding and fixing bugs, build packages for other popular distributions, if you're interested please join.
 
 # Copyright (C) 2010-2012 SKAT Ltd. (http://www.scat.su)
 
