--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,5 +14,8 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
+Версия 1.1.1
++ Ukrainian language support, builds and adaptings for Windows platforms
+
 Версия 0.1.0
-+ базовый функционал
++ basic functions
