--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,6 +14,9 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
+Версия 0.3.0
++ Calls history, contacts
+
 Версия 0.2.0
 + Fixed windows position, About window.
 
